--- a/style.css
+++ b/style.css
@@ -107,13 +107,11 @@
   }
   #features {
     padding: 0;
-    height: 500px
   }
   #features-img {
-    position: relative;
-    
-    bottom: -5px;
-    width: 30%;
+    width: 60%;
+    display: block;
+    margin: 2em auto 0 auto;
   }
   #pricing {
     position: relative;
@@ -254,7 +252,7 @@
     }
   }
 
-  @media (max-width: 500px) {
+  @media (max-width: 1000px) {
     #header {
       display: block;
     }
@@ -263,7 +261,6 @@
       float: none;
       width: fit-content;
       margin: 0 auto;
-      
     }
     #header-img {
       display: block;
@@ -276,21 +273,24 @@
     
     #nav-bar {
       float: none;
-      clear: both;
-      margin-left: auto;
-      margin-right: auto;
+      clear: right;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      padding: 0;
+      margin-right: 1em;
     }
     #nav-bar li {
+      display: inline-block;
       margin: 1em 32px;
     }
     #overview {
       flex-direction: column;
       padding-top: 150px;
     }
-
     #video {
-      width: 100vw;
-      height: 56.25vw;
+      width: 80vw;
+      height: 45vw;
       margin: 1em auto;
     }
     #colors {
@@ -299,8 +299,26 @@
     #colors p {
       padding: 50px;
     }
+    #features-img {
+      width: 80%;
+    }
+    #pricing {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
 
+  @media (max-width: 500px) {
+    #video {
+      width: 100vw;
+      height: 56.25vw;
+      margin: 1em auto;
+    }
+    #features-img {
+      width: 95%;
+    }
     #pricing {
       grid-template-columns: 1fr;
     }
   }
+
+  
