--- a/style.css
+++ b/style.css
@@ -239,6 +239,21 @@
     animation-fill-mode: forwards;
     animation-duration: 200ms;
   }
+  footer {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+  }
+  #socials {
+    list-style-type: none;
+    display: inline-flex;
+    padding: 0;
+  }
+  .social {
+    width: 40px;
+    margin: 1em;
+    border-radius: 5px;
+  }
 
   @keyframes email-scale {
     100% {
